python_cypher/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    QUOTE
    WHITESPACE

Grammar

Rule 0     S' -> full_query
Rule 1     node_clause -> LPAREN KEY RPAREN
Rule 2     node_clause -> LPAREN COLON NAME RPAREN
Rule 3     node_clause -> LPAREN KEY COLON NAME RPAREN
Rule 4     node_clause -> LPAREN KEY COLON NAME condition_list RPAREN
Rule 5     condition_list -> KEY COLON STRING
Rule 6     condition_list -> KEY COLON INTEGER
Rule 7     condition_list -> condition_list COMMA condition_list
Rule 8     condition_list -> LCURLEY condition_list RCURLEY
Rule 9     condition_list -> KEY COLON condition_list
Rule 10    constraint -> keypath EQUALS STRING
Rule 11    constraint -> keypath EQUALS INTEGER
Rule 12    constraint -> keypath EQUALS keypath
Rule 13    constraint -> keypath NOT_EQUAL INTEGER
Rule 14    constraint -> keypath GREATERTHAN INTEGER
Rule 15    constraint -> keypath GREATERTHAN_OR_EQUAL INTEGER
Rule 16    constraint -> keypath LESSTHAN INTEGER
Rule 17    constraint -> keypath LESSTHAN_OR_EQUAL INTEGER
Rule 18    constraint -> constraint OR constraint
Rule 19    constraint -> constraint AND constraint
Rule 20    constraint -> NOT constraint
Rule 21    constraint -> LPAREN constraint RPAREN
Rule 22    where_clause -> WHERE constraint
Rule 23    keypath -> KEY DOT KEY
Rule 24    keypath -> keypath DOT KEY
Rule 25    edge_condition -> LBRACKET RBRACKET
Rule 26    edge_condition -> LBRACKET COLON NAME RBRACKET
Rule 27    edge_condition -> LBRACKET COLON NAME condition_list RBRACKET
Rule 28    edge_condition -> LBRACKET KEY COLON NAME RBRACKET
Rule 29    edge_condition -> LBRACKET KEY COLON NAME condition_list RBRACKET
Rule 30    labeled_edge -> DASH edge_condition DASH GREATERTHAN
Rule 31    labeled_edge -> LESSTHAN DASH edge_condition DASH
Rule 32    literals -> node_clause
Rule 33    literals -> literals COMMA literals
Rule 34    literals -> literals RIGHT_ARROW literals
Rule 35    literals -> literals LEFT_ARROW literals
Rule 36    literals -> literals labeled_edge literals
Rule 37    match_where -> MATCH literals
Rule 38    match_where -> MATCH literals where_clause
Rule 39    create_clause -> CREATE literals
Rule 40    full_query -> match_where return_variables
Rule 41    full_query -> create_clause
Rule 42    full_query -> create_clause return_variables
Rule 43    return_variables -> RETURN KEY
Rule 44    return_variables -> RETURN keypath
Rule 45    return_variables -> return_variables COMMA KEY
Rule 46    return_variables -> return_variables COMMA keypath

Terminals, with rules where they appear

AND                  : 19
COLON                : 2 3 4 5 6 9 26 27 28 29
COMMA                : 7 33 45 46
CREATE               : 39
DASH                 : 30 30 31 31
DOT                  : 23 24
EQUALS               : 10 11 12
GREATERTHAN          : 14 30
GREATERTHAN_OR_EQUAL : 15
INTEGER              : 6 11 13 14 15 16 17
KEY                  : 1 3 4 5 6 9 23 23 24 28 29 43 45
LBRACKET             : 25 26 27 28 29
LCURLEY              : 8
LEFT_ARROW           : 35
LESSTHAN             : 16 31
LESSTHAN_OR_EQUAL    : 17
LPAREN               : 1 2 3 4 21
MATCH                : 37 38
NAME                 : 2 3 4 26 27 28 29
NOT                  : 20
NOT_EQUAL            : 13
OR                   : 18
QUOTE                : 
RBRACKET             : 25 26 27 28 29
RCURLEY              : 8
RETURN               : 43 44
RIGHT_ARROW          : 34
RPAREN               : 1 2 3 4 21
STRING               : 5 10
WHERE                : 22
WHITESPACE           : 
error                : 

Nonterminals, with rules where they appear

condition_list       : 4 7 7 8 9 27 29
constraint           : 18 18 19 19 20 21 22
create_clause        : 41 42
edge_condition       : 30 31
full_query           : 0
keypath              : 10 11 12 12 13 14 15 16 17 24 44 46
labeled_edge         : 36
literals             : 33 33 34 34 35 35 36 36 37 38 39
match_where          : 40
node_clause          : 32
return_variables     : 40 42 45 46
where_clause         : 38

Parsing method: LALR

state 0

    (0) S' -> . full_query
    (40) full_query -> . match_where return_variables
    (41) full_query -> . create_clause
    (42) full_query -> . create_clause return_variables
    (37) match_where -> . MATCH literals
    (38) match_where -> . MATCH literals where_clause
    (39) create_clause -> . CREATE literals

    MATCH           shift and go to state 4
    CREATE          shift and go to state 5

    full_query                     shift and go to state 1
    match_where                    shift and go to state 2
    create_clause                  shift and go to state 3

state 1

    (0) S' -> full_query .



state 2

    (40) full_query -> match_where . return_variables
    (43) return_variables -> . RETURN KEY
    (44) return_variables -> . RETURN keypath
    (45) return_variables -> . return_variables COMMA KEY
    (46) return_variables -> . return_variables COMMA keypath

    RETURN          shift and go to state 7

    return_variables               shift and go to state 6

state 3

    (41) full_query -> create_clause .
    (42) full_query -> create_clause . return_variables
    (43) return_variables -> . RETURN KEY
    (44) return_variables -> . RETURN keypath
    (45) return_variables -> . return_variables COMMA KEY
    (46) return_variables -> . return_variables COMMA keypath

    $end            reduce using rule 41 (full_query -> create_clause .)
    RETURN          shift and go to state 7

    return_variables               shift and go to state 8

state 4

    (37) match_where -> MATCH . literals
    (38) match_where -> MATCH . literals where_clause
    (32) literals -> . node_clause
    (33) literals -> . literals COMMA literals
    (34) literals -> . literals RIGHT_ARROW literals
    (35) literals -> . literals LEFT_ARROW literals
    (36) literals -> . literals labeled_edge literals
    (1) node_clause -> . LPAREN KEY RPAREN
    (2) node_clause -> . LPAREN COLON NAME RPAREN
    (3) node_clause -> . LPAREN KEY COLON NAME RPAREN
    (4) node_clause -> . LPAREN KEY COLON NAME condition_list RPAREN

    LPAREN          shift and go to state 11

    literals                       shift and go to state 9
    node_clause                    shift and go to state 10

state 5

    (39) create_clause -> CREATE . literals
    (32) literals -> . node_clause
    (33) literals -> . literals COMMA literals
    (34) literals -> . literals RIGHT_ARROW literals
    (35) literals -> . literals LEFT_ARROW literals
    (36) literals -> . literals labeled_edge literals
    (1) node_clause -> . LPAREN KEY RPAREN
    (2) node_clause -> . LPAREN COLON NAME RPAREN
    (3) node_clause -> . LPAREN KEY COLON NAME RPAREN
    (4) node_clause -> . LPAREN KEY COLON NAME condition_list RPAREN

    LPAREN          shift and go to state 11

    literals                       shift and go to state 12
    node_clause                    shift and go to state 10

state 6

    (40) full_query -> match_where return_variables .
    (45) return_variables -> return_variables . COMMA KEY
    (46) return_variables -> return_variables . COMMA keypath

    $end            reduce using rule 40 (full_query -> match_where return_variables .)
    COMMA           shift and go to state 13


state 7

    (43) return_variables -> RETURN . KEY
    (44) return_variables -> RETURN . keypath
    (23) keypath -> . KEY DOT KEY
    (24) keypath -> . keypath DOT KEY

    KEY             shift and go to state 14

    keypath                        shift and go to state 15

state 8

    (42) full_query -> create_clause return_variables .
    (45) return_variables -> return_variables . COMMA KEY
    (46) return_variables -> return_variables . COMMA keypath

    $end            reduce using rule 42 (full_query -> create_clause return_variables .)
    COMMA           shift and go to state 13


state 9

    (37) match_where -> MATCH literals .
    (38) match_where -> MATCH literals . where_clause
    (33) literals -> literals . COMMA literals
    (34) literals -> literals . RIGHT_ARROW literals
    (35) literals -> literals . LEFT_ARROW literals
    (36) literals -> literals . labeled_edge literals
    (22) where_clause -> . WHERE constraint
    (30) labeled_edge -> . DASH edge_condition DASH GREATERTHAN
    (31) labeled_edge -> . LESSTHAN DASH edge_condition DASH

    RETURN          reduce using rule 37 (match_where -> MATCH literals .)
    COMMA           shift and go to state 17
    RIGHT_ARROW     shift and go to state 18
    LEFT_ARROW      shift and go to state 19
    WHERE           shift and go to state 21
    DASH            shift and go to state 22
    LESSTHAN        shift and go to state 23

    where_clause                   shift and go to state 16
    labeled_edge                   shift and go to state 20

state 10

    (32) literals -> node_clause .

    COMMA           reduce using rule 32 (literals -> node_clause .)
    RIGHT_ARROW     reduce using rule 32 (literals -> node_clause .)
    LEFT_ARROW      reduce using rule 32 (literals -> node_clause .)
    WHERE           reduce using rule 32 (literals -> node_clause .)
    DASH            reduce using rule 32 (literals -> node_clause .)
    LESSTHAN        reduce using rule 32 (literals -> node_clause .)
    RETURN          reduce using rule 32 (literals -> node_clause .)
    $end            reduce using rule 32 (literals -> node_clause .)


state 11

    (1) node_clause -> LPAREN . KEY RPAREN
    (2) node_clause -> LPAREN . COLON NAME RPAREN
    (3) node_clause -> LPAREN . KEY COLON NAME RPAREN
    (4) node_clause -> LPAREN . KEY COLON NAME condition_list RPAREN

    KEY             shift and go to state 24
    COLON           shift and go to state 25


state 12

    (39) create_clause -> CREATE literals .
    (33) literals -> literals . COMMA literals
    (34) literals -> literals . RIGHT_ARROW literals
    (35) literals -> literals . LEFT_ARROW literals
    (36) literals -> literals . labeled_edge literals
    (30) labeled_edge -> . DASH edge_condition DASH GREATERTHAN
    (31) labeled_edge -> . LESSTHAN DASH edge_condition DASH

    RETURN          reduce using rule 39 (create_clause -> CREATE literals .)
    $end            reduce using rule 39 (create_clause -> CREATE literals .)
    COMMA           shift and go to state 17
    RIGHT_ARROW     shift and go to state 18
    LEFT_ARROW      shift and go to state 19
    DASH            shift and go to state 22
    LESSTHAN        shift and go to state 23

    labeled_edge                   shift and go to state 20

state 13

    (45) return_variables -> return_variables COMMA . KEY
    (46) return_variables -> return_variables COMMA . keypath
    (23) keypath -> . KEY DOT KEY
    (24) keypath -> . keypath DOT KEY

    KEY             shift and go to state 26

    keypath                        shift and go to state 27

state 14

    (43) return_variables -> RETURN KEY .
    (23) keypath -> KEY . DOT KEY

    COMMA           reduce using rule 43 (return_variables -> RETURN KEY .)
    $end            reduce using rule 43 (return_variables -> RETURN KEY .)
    DOT             shift and go to state 28


state 15

    (44) return_variables -> RETURN keypath .
    (24) keypath -> keypath . DOT KEY

    COMMA           reduce using rule 44 (return_variables -> RETURN keypath .)
    $end            reduce using rule 44 (return_variables -> RETURN keypath .)
    DOT             shift and go to state 29


state 16

    (38) match_where -> MATCH literals where_clause .

    RETURN          reduce using rule 38 (match_where -> MATCH literals where_clause .)


state 17

    (33) literals -> literals COMMA . literals
    (32) literals -> . node_clause
    (33) literals -> . literals COMMA literals
    (34) literals -> . literals RIGHT_ARROW literals
    (35) literals -> . literals LEFT_ARROW literals
    (36) literals -> . literals labeled_edge literals
    (1) node_clause -> . LPAREN KEY RPAREN
    (2) node_clause -> . LPAREN COLON NAME RPAREN
    (3) node_clause -> . LPAREN KEY COLON NAME RPAREN
    (4) node_clause -> . LPAREN KEY COLON NAME condition_list RPAREN

    LPAREN          shift and go to state 11

    literals                       shift and go to state 30
    node_clause                    shift and go to state 10

state 18

    (34) literals -> literals RIGHT_ARROW . literals
    (32) literals -> . node_clause
    (33) literals -> . literals COMMA literals
    (34) literals -> . literals RIGHT_ARROW literals
    (35) literals -> . literals LEFT_ARROW literals
    (36) literals -> . literals labeled_edge literals
    (1) node_clause -> . LPAREN KEY RPAREN
    (2) node_clause -> . LPAREN COLON NAME RPAREN
    (3) node_clause -> . LPAREN KEY COLON NAME RPAREN
    (4) node_clause -> . LPAREN KEY COLON NAME condition_list RPAREN

    LPAREN          shift and go to state 11

    literals                       shift and go to state 31
    node_clause                    shift and go to state 10

state 19

    (35) literals -> literals LEFT_ARROW . literals
    (32) literals -> . node_clause
    (33) literals -> . literals COMMA literals
    (34) literals -> . literals RIGHT_ARROW literals
    (35) literals -> . literals LEFT_ARROW literals
    (36) literals -> . literals labeled_edge literals
    (1) node_clause -> . LPAREN KEY RPAREN
    (2) node_clause -> . LPAREN COLON NAME RPAREN
    (3) node_clause -> . LPAREN KEY COLON NAME RPAREN
    (4) node_clause -> . LPAREN KEY COLON NAME condition_list RPAREN

    LPAREN          shift and go to state 11

    literals                       shift and go to state 32
    node_clause                    shift and go to state 10

state 20

    (36) literals -> literals labeled_edge . literals
    (32) literals -> . node_clause
    (33) literals -> . literals COMMA literals
    (34) literals -> . literals RIGHT_ARROW literals
    (35) literals -> . literals LEFT_ARROW literals
    (36) literals -> . literals labeled_edge literals
    (1) node_clause -> . LPAREN KEY RPAREN
    (2) node_clause -> . LPAREN COLON NAME RPAREN
    (3) node_clause -> . LPAREN KEY COLON NAME RPAREN
    (4) node_clause -> . LPAREN KEY COLON NAME condition_list RPAREN

    LPAREN          shift and go to state 11

    literals                       shift and go to state 33
    node_clause                    shift and go to state 10

state 21

    (22) where_clause -> WHERE . constraint
    (10) constraint -> . keypath EQUALS STRING
    (11) constraint -> . keypath EQUALS INTEGER
    (12) constraint -> . keypath EQUALS keypath
    (13) constraint -> . keypath NOT_EQUAL INTEGER
    (14) constraint -> . keypath GREATERTHAN INTEGER
    (15) constraint -> . keypath GREATERTHAN_OR_EQUAL INTEGER
    (16) constraint -> . keypath LESSTHAN INTEGER
    (17) constraint -> . keypath LESSTHAN_OR_EQUAL INTEGER
    (18) constraint -> . constraint OR constraint
    (19) constraint -> . constraint AND constraint
    (20) constraint -> . NOT constraint
    (21) constraint -> . LPAREN constraint RPAREN
    (23) keypath -> . KEY DOT KEY
    (24) keypath -> . keypath DOT KEY

    NOT             shift and go to state 36
    LPAREN          shift and go to state 37
    KEY             shift and go to state 38

    constraint                     shift and go to state 34
    keypath                        shift and go to state 35

state 22

    (30) labeled_edge -> DASH . edge_condition DASH GREATERTHAN
    (25) edge_condition -> . LBRACKET RBRACKET
    (26) edge_condition -> . LBRACKET COLON NAME RBRACKET
    (27) edge_condition -> . LBRACKET COLON NAME condition_list RBRACKET
    (28) edge_condition -> . LBRACKET KEY COLON NAME RBRACKET
    (29) edge_condition -> . LBRACKET KEY COLON NAME condition_list RBRACKET

    LBRACKET        shift and go to state 40

    edge_condition                 shift and go to state 39

state 23

    (31) labeled_edge -> LESSTHAN . DASH edge_condition DASH

    DASH            shift and go to state 41


state 24

    (1) node_clause -> LPAREN KEY . RPAREN
    (3) node_clause -> LPAREN KEY . COLON NAME RPAREN
    (4) node_clause -> LPAREN KEY . COLON NAME condition_list RPAREN

    RPAREN          shift and go to state 42
    COLON           shift and go to state 43


state 25

    (2) node_clause -> LPAREN COLON . NAME RPAREN

    NAME            shift and go to state 44


state 26

    (45) return_variables -> return_variables COMMA KEY .
    (23) keypath -> KEY . DOT KEY

    COMMA           reduce using rule 45 (return_variables -> return_variables COMMA KEY .)
    $end            reduce using rule 45 (return_variables -> return_variables COMMA KEY .)
    DOT             shift and go to state 28


state 27

    (46) return_variables -> return_variables COMMA keypath .
    (24) keypath -> keypath . DOT KEY

    COMMA           reduce using rule 46 (return_variables -> return_variables COMMA keypath .)
    $end            reduce using rule 46 (return_variables -> return_variables COMMA keypath .)
    DOT             shift and go to state 29


state 28

    (23) keypath -> KEY DOT . KEY

    KEY             shift and go to state 45


state 29

    (24) keypath -> keypath DOT . KEY

    KEY             shift and go to state 46


state 30

    (33) literals -> literals COMMA literals .
    (33) literals -> literals . COMMA literals
    (34) literals -> literals . RIGHT_ARROW literals
    (35) literals -> literals . LEFT_ARROW literals
    (36) literals -> literals . labeled_edge literals
    (30) labeled_edge -> . DASH edge_condition DASH GREATERTHAN
    (31) labeled_edge -> . LESSTHAN DASH edge_condition DASH

  ! shift/reduce conflict for COMMA resolved as shift
  ! shift/reduce conflict for RIGHT_ARROW resolved as shift
  ! shift/reduce conflict for LEFT_ARROW resolved as shift
  ! shift/reduce conflict for DASH resolved as shift
  ! shift/reduce conflict for LESSTHAN resolved as shift
    WHERE           reduce using rule 33 (literals -> literals COMMA literals .)
    RETURN          reduce using rule 33 (literals -> literals COMMA literals .)
    $end            reduce using rule 33 (literals -> literals COMMA literals .)
    COMMA           shift and go to state 17
    RIGHT_ARROW     shift and go to state 18
    LEFT_ARROW      shift and go to state 19
    DASH            shift and go to state 22
    LESSTHAN        shift and go to state 23

  ! COMMA           [ reduce using rule 33 (literals -> literals COMMA literals .) ]
  ! RIGHT_ARROW     [ reduce using rule 33 (literals -> literals COMMA literals .) ]
  ! LEFT_ARROW      [ reduce using rule 33 (literals -> literals COMMA literals .) ]
  ! DASH            [ reduce using rule 33 (literals -> literals COMMA literals .) ]
  ! LESSTHAN        [ reduce using rule 33 (literals -> literals COMMA literals .) ]

    labeled_edge                   shift and go to state 20

state 31

    (34) literals -> literals RIGHT_ARROW literals .
    (33) literals -> literals . COMMA literals
    (34) literals -> literals . RIGHT_ARROW literals
    (35) literals -> literals . LEFT_ARROW literals
    (36) literals -> literals . labeled_edge literals
    (30) labeled_edge -> . DASH edge_condition DASH GREATERTHAN
    (31) labeled_edge -> . LESSTHAN DASH edge_condition DASH

  ! shift/reduce conflict for COMMA resolved as shift
  ! shift/reduce conflict for RIGHT_ARROW resolved as shift
  ! shift/reduce conflict for LEFT_ARROW resolved as shift
  ! shift/reduce conflict for DASH resolved as shift
  ! shift/reduce conflict for LESSTHAN resolved as shift
    WHERE           reduce using rule 34 (literals -> literals RIGHT_ARROW literals .)
    RETURN          reduce using rule 34 (literals -> literals RIGHT_ARROW literals .)
    $end            reduce using rule 34 (literals -> literals RIGHT_ARROW literals .)
    COMMA           shift and go to state 17
    RIGHT_ARROW     shift and go to state 18
    LEFT_ARROW      shift and go to state 19
    DASH            shift and go to state 22
    LESSTHAN        shift and go to state 23

  ! COMMA           [ reduce using rule 34 (literals -> literals RIGHT_ARROW literals .) ]
  ! RIGHT_ARROW     [ reduce using rule 34 (literals -> literals RIGHT_ARROW literals .) ]
  ! LEFT_ARROW      [ reduce using rule 34 (literals -> literals RIGHT_ARROW literals .) ]
  ! DASH            [ reduce using rule 34 (literals -> literals RIGHT_ARROW literals .) ]
  ! LESSTHAN        [ reduce using rule 34 (literals -> literals RIGHT_ARROW literals .) ]

    labeled_edge                   shift and go to state 20

state 32
